Typescript_Compiler/grammar.txt
SEMI -> ;
LBR -> [{]
RBR -> [}]
LP -> [(]
RP -> [)]
EQ -> =
CMA -> ,
IF -> \bif\b
WHILE -> \bwhile\b
ELSE -> \belse\b
TYPE -> \b(int\|double)\b
NUM -> \d+
ID -> [A-Za-z_]+

S -> stmt-list
stmt-list -> stmt stmt-list | lambda
stmt -> loop | cond | assign SEMI | LBR stmt-list RBR
loop -> WHILE LP expr RP stmt
cond -> IF LP expr RP stmt | IF LP expr RP stmt ELSE stmt
assign -> ID EQ expr
expr -> NUM | ID
